@@ -1,0 +1,12 @@
+
+Package: kernel-signed-image-ABI-FLAVOUR-di
+Package-Type: udeb
+Section: debian-installer
+Priority: extra
+Provides: kernel-signed-image
+Architecture: linux-amd64
+Built-Using: linux (= ${linux:Version})
+Description: Signed kernel image FLAVOUR for the Debian installer
+ A kernel image for FLAVOUR.  This version of it is signed with
+ Canonical's UEFI signing key.  It is intended for the Debian installer,
+ it does _not_ provide a usable kernel for your full Debian system.
