@@ -2,6 +2,8 @@ linux-signed (4.2.0-13.15+signed2) UNRELEASED; urgency=low
 
   * move linux-signed linux-image-extra-* dependencies over to linux-meta.
     (LP: #1501235)
+  * allow us to configure which flavours produce a udeb of the signed
+    kernel.
 
  -- Andy Whitcroft <apw@canonical.com>  Wed, 30 Sep 2015 09:52:07 +0100
 
